[package]
name = "webservices"
version = "0.1.0"
edition = "2021"
#不指定二进制，就默认执行teacher-service
default-run="teacher-service"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt="1.1.1"
[[bin]]
name= "teacher-service"
